--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,16 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="Toy Tips App" />
+    <meta name="title" property="og:title" content="Toy Tips" />
+    <meta property="og:type" content="Website" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://live.staticflickr.com/65535/51736580591_83ea1eb257_k.jpg"
+    />
+    <meta name="description" property="og:description" content="Toy Tips App" />
+    <meta name="author" content="Abelard Bautista" />
     <title>Toy Tips</title>
   </head>
   <body>
